refactor(connectors): split Wikimedia connector into clean URL and default variations
- Introduced `WikimediaCleanUrlConnector` and `WikimediaDefaultConnector` for specialized content retrieval.
- Refactored `WikimediaConnector` into `AbstractWikimediaConnector` as a base class.
- Updated `ExternalServiceConnectorPanelController` to support new connector selection.
- Replaced XML-RPC dependency with Apache HttpClient for improved HTTP handling.
- Improved URL generation and encoding logic for Wikimedia connectors.
- Updated test cases and resources for new connector implementations.

Signed-off-by: Hiroshi Miura <miurahr@linux.com>